[gd_scene load_steps=4 format=3 uid="uid://c8qj2y6yvx3yjb"]

[ext_resource type="Script" path="res://scenes/shop/shop_item_card.gd" id="1_yjnqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ShopItemCard" type="Panel"]
custom_minimum_size = Vector2(120, 180)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_yjnqm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="IconPanel" type="Panel" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="IconTexture" type="TextureRect" parent="VBoxContainer/MarginContainer/IconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="RarityIndicator" type="ColorRect" parent="VBoxContainer/MarginContainer/IconPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -10.0
offset_right = 15.0
offset_bottom = -5.0
grow_vertical = 0
color = Color(0.8, 0.8, 0.8, 1)

[node name="TypeIndicator" type="Label" parent="VBoxContainer/MarginContainer/IconPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "物品名称"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PriceContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="CoinIcon" type="TextureRect" parent="VBoxContainer/PriceContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="VBoxContainer/PriceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "购买"

[node name="TooltipPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 200.0
offset_bottom = 150.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "物品名称"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "物品描述信息..."
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "属性: +10 攻击力"
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
